--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:start": "pm2 start ecosystem.config.cjs",
     "pm2:stop": "pm2 stop all",
     "pm2:logs": "pm2 logs",
     "pm2:delete": "pm2 delete all"
@@ -24,7 +24,7 @@
     "ioredis": "^5.8.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.10",
+    "nodemon": "^3.1.11",
     "pm2": "^6.0.13",
     "redis": "^5.9.0",
     "uuid": "^13.0.0",
